tdf#95707 RTF import: handle device-independent bitmaps

See
<https://msdn.microsoft.com/en-us/library/dd183374%28v=vs.85%29.aspx>
for more info about the header structure that has to be prepended to the
real data to make our BMP import filter happy.

Also: disable a unit test on OS X, that previously passed, but turns out
to be unstable on libreoffice-5-1.

(cherry picked from commit 6bacfc8d95163a3eacc2784660282a8ce7d9a552)

Conflicts:
	writerfilter/source/rtftok/rtfdocumentimpl.cxx

Change-Id: Iabdf4cd169b82ea951d1c1b12432d97d61b7af51